lista e fix testes